--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: minimal
 dist: xenial
 install: wget -qO- --retry-connrefused https://storage.googleapis.com/matlabimagesus/public/install.sh | sudo -E bash
-script: matlab -batch "disp('Hello World')"
+script: matlab -batch "cd Software/MATLAB; startup; cd test/unit; runtests; exit(any(table(ans).Failed));"
