Updated with Maven build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: minimal
+language: java
 dist: xenial
 install: wget -qO- --retry-connrefused https://storage.googleapis.com/matlabimagesus/public/install.sh | sudo -E bash
-script: matlab -batch "cd Software/MATLAB; startup; cd test/unit; runtests; exit(any(table(ans).Failed));"
+script: cd Software/Java; mvn dependency:copy; matlab -batch "cd Software/MATLAB; startup; cd test/unit; runtests; exit(any(table(ans).Failed));"
